# nushell

./: Cargo.toml  clippy.toml
.github/workflows/: ci.yml
crates/nu-clip/: Cargo.toml
crates/nu-clip/src/: controller.rs  lib.rs  types.rs
crates/nu-clip/src/backend/: mod.rs
crates/nu-clip/src/backend/impl/: windows.rs
crates/nu-color-config/: Cargo.toml
crates/nu-color-config/src/: style_computer.rs
crates/nu-command/: Cargo.toml
crates/nu-command/src/: default_context.rs  lib.rs
crates/nu-command/src/database/: error.rs  mod.rs
crates/nu-command/src/database_next/: connection.rs  error.rs  mod.rs
crates/nu-command/src/database_nova/: error.rs  mod.rs
crates/nu-command/src/debug/: experimental_options.rs
crates/nu-command/src/filesystem/: open.rs
crates/nu-command/src/system/: run_external.rs
crates/nu-command/src/viewers/: table.rs
crates/nu-command/tests/: main.rs
crates/nu-command/tests/commands/: mod.rs  source_env.rs  ucp.rs
crates/nu-compat/: Cargo.toml
crates/nu-compat/examples/: example.rs
crates/nu-compat/src/: lib.rs
crates/nu-derive-value/src/: from.rs
crates/nu-engine/src/: command_prelude.rs
crates/nu-experimental/: Cargo.toml
crates/nu-experimental/src/: lib.rs  test_support.rs
crates/nu-experimental/src/options/: database_cmd_next.rs  database_nova.rs  mod.rs  pipefail.rs
crates/nu-heavy-utils/: Cargo.toml
crates/nu-heavy-utils/src/: lib.rs
crates/nu-path/: Cargo.toml
crates/nu-path/src/: path.rs
crates/nu-protocol/: Cargo.toml
crates/nu-protocol/src/: deprecation.rs  eval_base.rs  signature.rs  span.rs
crates/nu-protocol/src/ast/: call.rs  mod.rs
crates/nu-protocol/src/config/: ansi_coloring.rs  completer.rs  error.rs  filesize.rs  helper.rs  hooks.rs  mod.rs  output.rs  plugin_gc.rs  reedline.rs  table.rs
crates/nu-protocol/src/engine/: closure.rs  engine_state.rs
crates/nu-protocol/src/errors/: labeled_error.rs
crates/nu-protocol/src/pipeline/: pipeline_data.rs
crates/nu-protocol/src/value/: custom_value.rs  filesize.rs  from_value.rs  mod.rs  range.rs
crates/nu-system/src/: windows.rs
crates/nu-test/: Cargo.toml  TODO.md
crates/nu-test-support/: Cargo.toml
crates/nu-test-support-macros/: Cargo.toml
crates/nu-test-support-macros/src/: lib.rs  metadata.rs  test.rs
crates/nu-test-support/src/: builder.rs  commands.rs  harness.rs  lib.rs  macros.rs
crates/nu-test-support/tests/: nu_experimental.rs
crates/nu-test/src/: discover.rs  group.rs  lib.rs  main.rs  test.rs
crates/nu-test/tests/: example.nu
crates/nu-utils/src/: lib.rs  push_fmt.rs
crates/nu_plugin_formats/: Cargo.toml
crates/nuon/src/: lib.rs
src/: command.rs  main.rs  test.rs
tests/shell/: repl.rs
tests/shell/environment/: env.rs
(+66 files in other folders)
