[package]
authors = ["The Nushell Project Developers"]
description = "Clipboard implementation for Nushell"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-clip"
edition = "2024"
license = "MIT"
name = "nu-clip"
version = "0.110.1"

[dependencies]
nu-protocol = { version = "0.110.1", path = "../nu-protocol" }
nuon = { version = "0.110.1", path = "../nuon" }

chrono = { workspace = true }
const_format = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
workspace = true
features = ["Win32_System_DataExchange"]
