[package]
authors = ["The Nushell Project Developers"]
description = "Nushell test runner"
edition.workspace = true
license = "MIT"
name = "nu-test"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-test"
rust-version.workspace = true
version = "0.112.3"
publish = false # not done yet

[lib]
harness = false

[dependencies]

[dev-dependencies]
nu-test-support = { path = "../nu-test-support" }
