[package]
authors = ["The Nushell Project Developers"]
description = "Nushell test runner"
edition.workspace = true
license = "MIT"
name = "nu-test"
repository = "https://github.com/nushell/nushell/tree/main/crates/nu-test"
rust-version.workspace = true
version = "0.112.3"
publish = false # not done yet

[dependencies]
nu-cli = { path = "../nu-cli", version = "0.112.3" }
nu-cmd-extra = { path = "../nu-cmd-extra", version = "0.112.3" }
nu-cmd-lang = { path = "../nu-cmd-lang", version = "0.112.3" }
nu-command = { path = "../nu-command", version = "0.112.3" }
nu-engine = { path = "../nu-engine", version = "0.112.3" }
nu-experimental = { path = "../nu-experimental", version = "0.112.3" }
nu-glob = { path = "../nu-glob", version = "0.112.3" }
nu-parser = { path = "../nu-parser", version = "0.112.3" }
nu-path = { path = "../nu-path", version = "0.112.3" }
nu-protocol = { path = "../nu-protocol", version = "0.112.3" }
nu-std = { path = "../nu-std", version = "0.112.3" }
nu-utils = { path = "../nu-utils", version = "0.112.3" }

derive_more = { workspace = true }
kitest = { workspace = true }
thiserror = { workspace = true }
